--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^4.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
     "react-particles-js": "^3.2.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-core": "^6.26.3",
