--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/xlincw0w/Naises#readme",
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
     "html-webpack-plugin": "^4.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
