--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "test": "jest --watch /tests",
     "server": "rm -rf dist && webpack --config webpack.prod.js && node server.js",
-    "build": "rm -rf dist && webpack --config webpack.prod.js"
+    "build": "rm -rf dist && webpack --config webpack.prod.js",
+    "both": "concurrently \"nodemon api/api.js\" \"npm run start\" "
   },
   "repository": {
     "type": "git",
@@ -19,19 +20,25 @@
   },
   "homepage": "https://github.com/xlincw0w/Naises#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "firebase": "^7.14.6",
     "firebase-admin": "^8.12.1",
     "firebaseui": "^4.5.1",
     "html-webpack-plugin": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
     "react-particles-js": "^3.2.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
@@ -42,10 +49,14 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-es2015": "^6.24.1",
+    "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
     "css-loader": "^3.5.3",
     "csv-loader": "^3.0.3",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
+    "knex": "^0.21.2",
+    "pg": "^8.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
