--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
+    "react-icons": "^3.10.0",
     "react-particles-js": "^3.2.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -56,6 +57,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "knex": "^0.21.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "pg": "^8.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
